package com.ww.observer;

public interface Observer {

    void update();
}
